# petdex-linux

./: .gitignore  README.md  install.sh  petdex-desktop.service
.github/workflows/: build.yml
.hermes/plans/: 2026-06-26_083000-pet-activity-signals.md  2026-06-26_093000-desktop-activity-monitor.md
runtime/: bubble.json  state.json
sidecar/: activity-monitor.js  package.json  server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
ui/: index.html  pet.js  style.css
